[project]
name = "evals-api-hosted-model"
version = "0.1.0"
description = "Run a suite of off-the-shelf benchmarks against an LLM API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fsspec>=2025.3.2",
    "huggingface-hub>=0.31.1",
    "openai>=1.78.1",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.4",
    "vllm>=0.8",
    "wandb>=0.19.11",
    "weave",
]
