[project]
name = "inspect-ai-evals-wandb-job"
version = "0.1.0"
description = "Run a suite of off-the-shelf Inspect AI benchmarks against an LLM API and log the results to Weave"
readme = "README.md"
authors = [
    { name = "Bharat Ramanathan", email = "bharat.ramanathan@wandb.com" }
]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.64.0",
    "black>=25.1.0",
    "huggingface-hub>=0.31.1",
    "inspect-ai>=0.3.69",
    "inspect-evals",
    "inspect-evals[ifeval]",
    "inspect-wandb[weave]",
    "openai>=1.78.1",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.10.1",
    "sympy>=1.14.0",
    "wandb>=0.19.11",
    "weave>=0.51.59",
    "google-genai",
    "rouge",
]

[tool.uv.sources]
inspect-evals = { git = "https://github.com/UKGovernmentBEIS/inspect_evals" }
inspect-wandb = { git = "https://github.com/parambharat/inspect_wandb.git" }

[tool.inspect-wandb.weave]
enabled = true

[tool.inspect-wandb.models]
enabled = false
